# anki-kor-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh-TW.md  docker-compose.yml  main.py  pyproject.toml
data/: korean_words.txt
deployment/: Dockerfile  README.md  docker-compose.yml
docs/: README.md  README.zh-TW.md
frontend/: .dockerignore  .env.example  .env.production  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: BauhausShapes.jsx  Dashboard.jsx  GlassComponents.jsx  ListeningQuickCreate.jsx  Navbar.jsx  TargetListManager.jsx  VocabList.jsx  VocabQuickCreate.jsx
frontend/src/contexts/: CoverageContext.jsx
frontend/src/hooks/: useConnectionStatus.js
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: DashboardPage.jsx  LearningCenterPage.jsx  (+1 more)
src/: config.py  startup.py
src/graph/: anki_loader.py  listening_loader.py  vocab_loader.py
src/models/: listening_state.py  root_schema.py  state.py  vocab_state.py  word_schema.py
src/nodes/: build_back.py  build_tags.py  check_duplicate.py  extract_root.py  parse_word.py  send_to_anki.py
src/prompt/: extract_root.yaml  parse_word.yaml  translate_sentence.yaml
src/routers/: __init__.py  listening.py  status.py  vocab.py
src/service/: anki_service.py  listening_anki_service.py  vocab_anki_service.py
src/templates/: back_minimal.html  listening_back.html
src/utils/: anki.py  llm.py  logger.py  prompt_loader.py  template.py  tts.py
(+25 files in other folders)
