[project]
name = "anki-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "gtts>=2.5.0",
    "jinja2>=3.1.6",
    "langgraph>=1.0.3",
    "openai>=2.8.1",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
]
